debian-installer (20041028) UNRELEASED; urgency=low

  * Steve Langasek
    - tweaks to the sample SRM boot commands for alpha netbooting, to
      make them usable
    - Drop references to floppy-based booting on alpha, since it's not
      currently supported by d-i.

 -- Steve Langasek <vorlon@debian.org>  Mon,  1 Nov 2004 22:30:50 -0800

debian-installer (20041027) unstable; urgency=HIGH

  * Colin Watson
    - Remove asian-root floppy for powerpc, and make the root floppy
      English-only. The 2.6 root floppy now fits. Closes: #276826
  * Joey Hess
    - Remove fdisk-udeb from overfull mips initrds. The priority/dependency
      situation will be dealt with in another way.
    - This build also contains important fixes in languagechooser,
      kbd-chooser, and hw-detect, lowmem.
    - Missing Romanian characters were added. Closes: #278099
    - Back to building using udebs from testing since testing is now
      consistent.

 -- Joey Hess <joeyh@debian.org>  Wed, 27 Oct 2004 13:11:07 -0400

debian-installer (20041014) unstable; urgency=HIGH

  * Colin Watson
    - Fix ramdisk root device path in manual.
  * Joey Hess
    - Disabled hppa 2.6 cd initrd building until we have udebs.
    - Disabled m68k vme floppy building since building the boot floppy
      requires root.

 -- Joey Hess <joeyh@debian.org>  Thu, 14 Oct 2004 15:04:57 -0400

debian-installer (20041012) unstable; urgency=high

  * Joey Hess
    - Add cdebconf-text-udeb to netboot i386 image.
    - Fix font reduction to include translations from driver floppies.
      Closes: #274396
    - Preseeding doc updates. Closes: #274486
    - Build-depend on cramfsprogs on ia64, needed for 2.6 kernels.
    - Back to building using udebs in sid to catch the latest set of
      translation updates and other fixes since pre-rc2.
    - upx-ucl-beta 1.93 is broken. Avoid building with this version.
      The safe version to use, 1.91, is in testing. Closes: #275378