@@ -17,12 +17,16 @@ example, <filename>rz0e</filename> in Tru64 UNIX would most likely be called
 
 </para><para>
 
-Partitions in the disk label may overlap.  Moreover, the `c' partition
-is required to span the entire disk (thus overlapping all other
-non-empty partitions).  Under Linux this makes <filename>sda3</filename>
-identical to <filename>sda</filename> (<filename>sdb3</filename> to <filename>sdb</filename>, if
-present, and so on).  Apart from satisfying this requirement, you
-should carefully avoid creating overlapping partitions.
+Partitions in a Tru64 disk label may overlap.  Moreover, if this disk
+will be used from Tru64, the `c' partition is required to span the
+entire disk (thus overlapping all other non-empty partitions).  Under
+Linux this makes <filename>sda3</filename> identical to
+<filename>sda</filename> (<filename>sdb3</filename> to
+<filename>sdb</filename>, if present, and so on).  However, the partman
+partitioning tool used by &d-i; cannot handle overlapping partitions at
+present.  As a result, it is currently not recommended to share disks
+between Tru64 and Debian.  Partitions on Tru64 disks can be mounted
+under Debian after installation has been completed.
 
 </para><para>
 
@@ -30,24 +34,8 @@ Another conventional requirement is for the `a' partition to start from
 the beginning of the disk, so that it always includes the boot block
 with the disk label. If you intend to boot Debian from that disk, you
 need to size it at least 2MB to fit aboot and perhaps a kernel.
-
-</para><para>
-
-Note that these two partitions are only required for compatibility;
-you must not put a file system onto them, or you'll destroy data.  If
-you're not going to share the disk with Tru64 Unix or one of the free
-4.4BSD-Lite derived operating systems (FreeBSD, OpenBSD, or NetBSD),
-you can ignore these requirements, and use the partitioning tool from
-the Debian boot disks.  See <xref linkend="partition-programs"/> for details.
-
-</para><para>
-
-Disks can be partitioned with the graphical disk configuration tool that
-is accessible through the Application Manager, or with the command-line
-<command>disklabel</command> utility.  Partition type for the Linux file
-system should be set to `resrvd8'.  This can only be done via
-<command>disklabel</command>; however, all other configuration can easily be
-performed with the graphical tool.
+Note that this partition is only required for compatibility; you must
+not put a file system onto it, or you'll destroy data.
 
 </para><para>
 
@@ -78,15 +66,18 @@ repartition your disk from the AlphaBIOS setup menu).  Otherwise, it
 is not really necessary to partition from Windows; the Linux
 partitioning tools will generally do a better job.  Note that when you
 run NT, the Disk Administrator may offer you to write a ``harmless
-signature'' on non-Windows disks if you have any.  <emphasis>Never</emphasis> let
-it do that, as this signature will destroy the partition information.
+signature'' on non-Windows disks if you have any.  <emphasis>Never</emphasis>
+let it do that, as this signature will destroy the partition
+information.
 
 </para><para>
 
 If you plan to boot Linux from an ARC/AlphaBIOS/ARCSBIOS console, you
 will need a (small) FAT partition for MILO.  5 Mb is quite
 sufficient.  If Windows NT is installed, its 6 Mb bootstrap partition
-can be employed for this purpose.
+can be employed for this purpose.  Debian &releasename; does not support
+installing MILO.  If you already have MILO installed on your system, or
+install MILO from other media, Debian can still be booted from ARC.
 
 </para>
   </sect2>
