@@ -5,6 +5,8 @@ debian-installer (20041028) UNRELEASED; urgency=low
       make them usable
     - Drop references to floppy-based booting on alpha, since it's not
       currently supported by d-i.
+    - Sync documentation about partitioning under non-Debian OSes on
+      alpha with reality, documenting the various limitations.
 
  -- Steve Langasek <vorlon@debian.org>  Mon,  1 Nov 2004 22:30:50 -0800
 
